Fixed broken index

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section::before {
     position: absolute;
     inset: 0;
 
-    background-image: url(/images/HighresScreenshot00004.png);
+    background-image: url(images/HighresScreenshot00004.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
